--- a/README
+++ b/README
@@ -1,1 +1,26 @@
 toto
+Global setup:
+
+ Download and install Git
+  git config --global user.name "Your Name"
+  git config --global user.email cyrille.roy@free.fr
+        
+
+Next steps:
+
+  mkdir test2
+  cd test2
+  git init
+  touch README
+  git add README
+  git commit -m 'first commit'
+  git remote add origin git@github.com:cyrilleroy/test2.git
+  git push origin master
+      
+
+Existing Git Repo?
+
+  cd existing_git_repo
+  git remote add origin git@github.com:cyrilleroy/test2.git
+  git push origin master
+      
