--- a/README
+++ b/README
@@ -24,4 +24,4 @@ Existing Git Repo?
   git remote add origin git@github.com:cyrilleroy/test2.git
   git push origin master
       
-
+insert from clone
